@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1 2018/07/26 14:27:23 manu Exp $
+bin/asciidir
+man/man1/asciidir.1
